--- a/generate_html_from_plsql/package/pivot.html
+++ b/generate_html_from_plsql/package/pivot.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <link href="StyleSheet.css" rel="stylesheet">
+  <link href="pivot.css" rel="stylesheet">
 </head>
   <body>
   <table>
@@ -17,5 +17,3 @@
   </table>
   </body>
 </html>
-
-
